--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -8,15 +8,27 @@ on:
 
 env:
   PUSH: false
+  TEST: false
 
 jobs:
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: dorny/paths-filter@v2
+      id: filter
+      with:
+        filters: |
+          base:
+            - 'base/**'
   base:
     uses: ./.github/workflows/main-workflow-template.yml
+    if: steps.filter.outputs.base == 'true'
     with:
       image: base
       context: base
       test: true
-      push: ${{env.PUSH}}
+      push: $env.PUSH
       base_image: ubuntu:20.04
       base_image_gpu: nvidia/cuda:11.3.1-base-ubuntu20.04
   python:
@@ -26,7 +38,7 @@ jobs:
       image: python
       context: python
       test: false
-      push: ${{env.PUSH}}
+      push: $env.PUSH
       base_image: inseefrlab/onyxia-base:latest
       base_image_gpu: inseefrlab/onyxia-base:latest-gpu
   r:
@@ -36,7 +48,7 @@ jobs:
       image: r
       context: r
       test: false
-      push: ${{env.PUSH}}
+      push: $env.PUSH
       base_image: inseefrlab/onyxia-base:latest
       base_image_gpu: inseefrlab/onyxia-base:latest-gpu
   jupyter:
@@ -46,7 +58,7 @@ jobs:
       image: jupyter
       context: jupyter
       test: false
-      push: ${{env.PUSH}}
+      push: $env.PUSH
       base_image: inseefrlab/onyxia-python:latest
       base_image_gpu: inseefrlab/onyxia-python:latest-gpu
   vscode:
@@ -56,7 +68,7 @@ jobs:
       image: vscode-python
       context: vscode
       test: false
-      push: ${{env.PUSH}}
+      push: $env.PUSH
       base_image: inseefrlab/onyxia-python:latest
       base_image_gpu: inseefrlab/onyxia-python:latest-gpu
   pyspark:
@@ -66,7 +78,7 @@ jobs:
       image: pyspark
       context: spark
       test: false
-      push: ${{env.PUSH}}
+      push: $env.PUSH
       base_image: inseefrlab/onyxia-python:latest
       base_image_gpu: inseefrlab/onyxia-python:latest-gpu
   jupyter-pyspark:
@@ -76,7 +88,7 @@ jobs:
       image: jupyter-pyspark
       context: jupyter
       test: false
-      push: ${{env.PUSH}}
+      push: $env.PUSH
       base_image: inseefrlab/onyxia-pyspark:latest
       base_image_gpu: inseefrlab/onyxia-pyspark:latest-gpu
   r-studio:
@@ -86,7 +98,7 @@ jobs:
       image: rstudio
       context: rstudio
       test: false
-      push: ${{env.PUSH}}
+      push: $env.PUSH
       base_image: inseefrlab/onyxia-r:latest
       base_image_gpu: inseefrlab/onyxia-r:latest-gpu
   sparkr:
@@ -96,7 +108,7 @@ jobs:
       image: sparkr
       context: spark
       test: false
-      push: ${{env.PUSH}}
+      push: $env.PUSH
       base_image: inseefrlab/onyxia-r:latest
       base_image_gpu: inseefrlab/onyxia-r:latest-gpu
   rstudio-sparkr:
@@ -106,6 +118,6 @@ jobs:
       image: rstudio-sparkr
       context: rstudio
       test: false
-      push: ${{env.PUSH}}
+      push: $env.PUSH
       base_image: inseefrlab/onyxia-sparkr:latest
       base_image_gpu: inseefrlab/onyxia-sparkr:latest-gpu
