--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -20,6 +20,17 @@ jobs:
         filters: |
           base:
             - 'base/**'
+          python:
+            - 'python/**'
+          r:
+            - 'r/**'
+          vscode:
+            - 'vscode/**'
+          jupyter:
+            - 'jupyter/**'
+          sparkr:
+            - 'sparkr/**'
+            
   base:
     uses: ./.github/workflows/main-workflow-template.yml
     if: needs.tests.steps.filter.outputs.base == 'true'
@@ -33,6 +44,7 @@ jobs:
       base_image_gpu: nvidia/cuda:11.3.1-base-ubuntu20.04
   python:
     needs: [base]
+    if: needs.tests.steps.filter.outputs.python == 'true'
     uses: ./.github/workflows/main-workflow-template.yml
     with:
       image: python
@@ -44,6 +56,7 @@ jobs:
   r:
     needs: [base]
     uses: ./.github/workflows/main-workflow-template.yml
+    if: needs.tests.steps.filter.outputs.r == 'true'
     with:
       image: r
       context: r
@@ -53,6 +66,7 @@ jobs:
       base_image_gpu: inseefrlab/onyxia-base:latest-gpu
   jupyter:
     needs: [python]
+    if: needs.tests.steps.filter.outputs.jupyter == 'true'
     uses: ./.github/workflows/main-workflow-template.yml
     with:
       image: jupyter
@@ -63,6 +77,7 @@ jobs:
       base_image_gpu: inseefrlab/onyxia-python:latest-gpu
   vscode:
     needs: [python]
+    if: needs.tests.steps.filter.outputs.vscode == 'true'
     uses: ./.github/workflows/main-workflow-template.yml
     with:
       image: vscode-python
