--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -31,6 +31,7 @@ jobs:
           sparkr:
             - 'sparkr/**'
   echo:
+    needs: tests
     runs-on: ubuntu-latest
     steps:
       - name: Dump GitHub context
