--- a/renovate.json
+++ b/renovate.json
@@ -10,6 +10,36 @@
       "depNameTemplate": "coder/code-server",
       "datasourceTemplate": "github-releases",
       "extractVersionTemplate": "^v(?<version>.*)$"
+    },
+    {
+      "fileMatch": ["^python/Dockerfile$"],
+      "matchStrings": ["ARG QUARTO_VERSION=\"(?<currentValue>.*?)\""],
+      "depNameTemplate": "quarto-dev/quarto-cli",
+      "datasourceTemplate": "github-releases",
+      "extractVersionTemplate": "^v(?<version>.*)$"
+    },
+     {
+      "fileMatch": ["^r/Dockerfile$"],
+      "matchStrings": ["ENV QUARTO_VERSION=\"(?<currentValue>.*?)\""],
+      "depNameTemplate": "quarto-dev/quarto-cli",
+      "datasourceTemplate": "github-releases",
+      "extractVersionTemplate": "^v(?<version>.*)$"
+    }
+    ,
+    {
+      "fileMatch": ["^python/Dockerfile$"],
+      "matchStrings": ["ARG MAMBAFORGE_VERSION=\"(?<currentValue>.*?)\""],
+      "depNameTemplate": "conda-forge/miniforge",
+      "datasourceTemplate": "github-releases",
+      "versioningTemplate":"regex:(?<major>.*?)\\.(?<minor>.*?)\\.(?<patch>.*?)\\-(?<build>.*?)"
+    },
+    {
+      "fileMatch": ["^r/Dockerfile$"],
+      "matchStrings": ["ENV R_VERSION=\"(?<currentValue>.*?)\""],
+      "depNameTemplate": "rocker-org/rocker-versioned2",
+      "datasourceTemplate": "github-releases",
+      "extractVersionTemplate": "^R(?<version>.*)$",
+      "prHeader":"Take care of this"
     }
   ]
 }
